fix: fix bug with pressing shift characters by physical keys

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -42,7 +42,7 @@ body {
         margin-left: 5px;
         border-radius: 3px;
         background-color: $blackColor;
-        transition: 0.2s;
+        transition: 0.1s;
         &:hover {
           background-color: $redColor;
         }
